# pyjoern

./: .gitignore  MANIFEST.in  README.md  install_dependencies.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml
pyjoern/: __init__.py  __main__.py  client.py  logger.py  mapping.py  server.py  utils.py
pyjoern/cfg/: __init__.py  cfged.py  ged.py  utils.py
pyjoern/cfg/jil/: block.py  lifter.py  statement.py
pyjoern/parsing/: __init__.py  fast_parser.py  function.py
pyjoern/scala/: FastParser.sc
pyjoern/scala_scripts/: fast_parser.sc
tests/: tests.py
tests/source/: ida9_fmt_coreutils.c  simple.c
tests/source/nginx/: fake_handler.c  ngx_mail_pop3_handler.c
