[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pyjoern"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
license = {text = "BSD 2 Clause"}
description = "PyJoern lifts Joern data and APIs into Pythonic form, focused on graph manipulation"
urls = {Homepage = "https://github.com/mahaloz/pyjoern"}
requires-python = ">= 3.10"
dependencies = [
    "networkx",
    "cpgqls_client",
    "cfgutils",
    "psutil",
    "graphviz",
    "pygraphviz",
    "toml",
    "tqdm"
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
]

[project.scripts]
versync = "pyjoern.__main__:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools.dynamic]
version = {attr = "pyjoern.__version__"}
