[metadata]
name = pyjoern
version = attr: pyjoern.__version__
url = https://github.com/mahaloz/pyjoern
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = PyJOERN lifts JOERN to a Python API that is more programatic
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    networkx
    cpgqls_client
    cfgutils
    psutil
    graphviz
    pygraphviz

python_requires = >= 3.6
packages = find:
include_package_data = True

