[metadata]
name = pyjoern
version = attr: pyjoern.__version__
url = https://github.com/mahaloz/pyjoern
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
license = BSD 2 Clause
license_files = LICENSE
description = PyJoern lifts Joern data and APIs into Pythonic form, focused on graph manipulation.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    networkx
    cpgqls_client
    cfgutils
    psutil
    graphviz
    pygraphviz
    toml
    tqdm

python_requires = >= 3.8
packages = find:
include_package_data = True

[options.package_data]
pyjoern = pyjoern/bin/*.md
